internal/xds/translator/testdata/out/xds-ir/wasm.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /foo
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.wasm/envoyextensionpolicy/default/policy-for-http-route/wasm/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.wasm/envoyextensionpolicy/envoy-gateway/policy-for-gateway/wasm/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.wasm/envoyextensionpolicy/envoy-gateway/policy-for-gateway/wasm/1:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.wasm/envoyextensionpolicy/envoy-gateway/policy-for-gateway/wasm/2:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http-2
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http-2/www_example_com
    routes:
    - match:
        pathSeparatedPrefix: /inherits-listener
      name: httproute/default/httproute-3/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-3/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.wasm/envoyextensionpolicy/default/policy-for-gateway/wasm/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        pathSeparatedPrefix: /route-overrides
      name: httproute/default/httproute-4/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-4/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.wasm/envoyextensionpolicy/default/policy-for-route/wasm/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
